--- a/source/layouts/layout.html.slim
+++ b/source/layouts/layout.html.slim
@@ -21,5 +21,5 @@ html.nojs
 
     == yield
 
-    = javascript_include_tag 'app'
-    = partial 'partials/_google_analytics'
+    /= javascript_include_tag 'app'
+    /= partial 'partials/_google_analytics'
