Redone with webfonts and svg

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -2,3 +2,13 @@
 title: 'Žižkov.rb'
 ---
 
+header
+
+section.big Soon
+
+section.pic
+  img src='/assets/images/Logo.svg'
+
+section.small is comming to&nbsp;repo near
+
+section.big you!
