--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -1,37 +1,41 @@
 //= require normalize-css/normalize
 
-// @import 'bourbon';
-// @import 'neat';
+@import 'bourbon';
+@import 'neat';
 // @import 'bitters';
 
-@font-face {
-  font-family: 'Gloriola_Display_Fat';
-  src:
-    url('../fonts/Gloriola_Display_Fat.eot');
-  src:
-    url('../fonts/Gloriola_Display_Fat.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/Gloriola_Display_Fat.woff') format('woff'),
-    local('☺');
-  font-weight: normal;
-  font-style: normal;
-}
+@include font-face(Gloriola_Display_Fat, '../fonts/Gloriola_Display_Fat', bold);
+
+$ruby: #BD091B;
+$max-width: 41em;
 
 .big, .small {
   font-family: 'Gloriola_Display_Fat';
 }
 
-.big {
-  font-size: 144px;
-}
-
-.small {
-  font-size: 100px;
-}
-
 body {
-  background-image: url('../images/launch.png');
-  background-repeat: no-repeat;
-  background-position: center;
-  min-width: 768px;
-  min-height: 1024px;
+  @include outer-container;
+
+  font-size: 16px;
+  text-align: center;
+  color: $ruby;
+
+  header {
+    border-top: 1em solid $ruby;
+  }
+
+  section.big {
+    font-size: 9em;
+  }
+
+  section.small {
+    font-size: 6.25em;
+  }
+
+  section.pic {
+    img {
+      width: 25em;
+    }
+  }
+
 }
