--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -10,6 +10,10 @@
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,300italic,400italic,600,600italic,700,700italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
     <%= stylesheet_link_tag "app" %>
+
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv-printshiv.min.js"></script>
+    <![endif]-->
   </head>
   <body>
 
