--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -1,5 +1,23 @@
 //= require normalize-css/normalize
 
+$main-color: #a52d23;
+$secondary-color: #c9482e;
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+.clearfix:after {
+   content: ".";
+   visibility: hidden;
+   display: block;
+   height: 0;
+   clear: both;
+}
+
 body {
   font-family: 'Titillium Web', sans-serif;
   background: #fff;
@@ -40,6 +58,8 @@ body {
   }
 }
 
+/* main menu */
+
 .menu-wrap {
   float: right;
 }
@@ -68,5 +88,89 @@ body {
     &.active {
       background: url('../images/menu-active.png') no-repeat center top;
     }
+  }
+}
+
+/* content */
+
+.content {
+  display: inline-block;
+  width: 790px;
+  padding: 30px;
+}
+
+/* sidebar */
+.sidebar {
+  display: inline-block;
+  width: 250px;
+  margin-left: -4px;
+}
+
+.sidebar-item {
+  margin-top: 30px;
+
+  h3 {
+    margin-bottom: 2px;
+    font-size: 18px;
+    font-weight: 600;
+    color: $main-color;
+  }
+
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
+    li, a {
+      display: block;
+    }
+
+    a {
+      padding: 5px 15px;
+      margin-bottom: 1px;
+      font-weight: 400;
+      font-size: 14px;
+      color: #fff;
+      text-decoration: none;
+      transition: background 0.3s;
+
+      & .headline {
+        font-weight: 700;
+      }
+    }
+  }
+
+  &.dark a {
+    background: $main-color;
+
+    &:hover {
+      background: lighten($main-color, 10%);
+    }
+  }
+  &.light a {
+    background: $secondary-color;
+
+    &:hover {
+      background: lighten($secondary-color, 10%);
+    }
+  }
+}
+
+footer {
+  margin-top: 30px;
+  padding-top: 5px;
+  padding-bottom: 30px;
+  border-top: 2px solid $main-color;
+
+  .made {
+    float: left;
+
+    .heart {
+      color: $main-color;
+    }
+  }
+
+  .feeds {
+    float: right;
   }
 }
