--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -106,11 +106,11 @@
       <footer class="clearfix">
         <div class="made">
           Made with <span class="heart">&hearts;</span> by Žižkov.rb team<br>
-          Designed by Attraco, supported by LastStar
+          Designed by <a href="http://www.attraco.net/cs/" target="_blank">Attraco</a>, supported by <a href="http://www.laststar.eu/" target="_blank">LastStar</a>
         </div>
         <div class="feeds">
-          Github @zizkovrb<br>
-          Twitter @zizkovrb
+          Github <a href="https://twitter.com/zizkovrb/" target="_blank">@zizkovrb</a><br>
+          Twitter <a href="https://github.com/zizkovrb/" target="_blank">@zizkovrb</a>
         </div>
       </footer>
 
