added helpers and typography

--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -1,5 +1,8 @@
 //= require normalize-css/normalize
 
+@import 'helpers.scss';
+@import 'typography.scss';
+
 $main-color: #a52d23;
 $secondary-color: #c9482e;
 
