--- a/source/assets/stylesheets/typography.scss
+++ b/source/assets/stylesheets/typography.scss
@@ -1,20 +1,3 @@
-h1 {
-  font-size: 28px;
-  font-weight: 400;
-}
-h2 {
-  font-size: 24px;
-  font-weight: 400;
-}
-h3 {
-  font-size: 22px;
-  font-weight: 400;
-}
-h4 {
-  font-size: 20px;
-  font-weight: 400;
-}
-h5 {
-  font-size: 18px;
+h1, h2, h3, h4, h5 {
   font-weight: 400;
 }
