article detail, paging

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,42 +4,47 @@ title: 'Žižkov.rb'
 
 <div class="blog-articles">
   <article class="blog-article">
-    <h1>
-      Refinery 2, episode: New engines</h1>
+    <h1>Refinery 2, episode: New engines</h1>
     <div class="article-info">
       <span class="date">Feb 9, 2012</span> &nbsp; | &nbsp; <a class="comments" href="#">15 Comments</a>
     </div>
     <div class="article-perex">
-      In et enim orci. Curabitur nulla nunc, efficitur ac euismod euismod, dapibus in nibh. Donec a ornare mi. Nullam purus lectus, porta et eros in, vestibulum vehicula nunc. Etiam felis justo, venenatis vitae efficitur a, vehicula sed enim. Suspendisse ullamcorper erat urna, et malesuada leo laoreet ac. Vestibulum convallis eget erat ac placerat. Proin placerat consequat vestibulum.
+      <p>In et enim orci. Curabitur nulla nunc, efficitur ac euismod euismod, dapibus in nibh. Donec a ornare mi. Nullam purus lectus, porta et eros in, vestibulum vehicula nunc. Etiam felis justo, venenatis vitae efficitur a, vehicula sed enim. Suspendisse ullamcorper erat urna, et malesuada leo laoreet ac. Vestibulum convallis eget erat ac placerat. Proin placerat consequat vestibulum.</p>
     </div>
     <div class="article-more">
-      <a href="#">Read more</a>
+      <a href="/article-detail/">Read more</a>
     </div>
   </article>
   <article class="blog-article">
-    <h1>
-      Refinery 2, episode: New engines</h1>
+    <h1>Refinery 2, episode: New engines</h1>
     <div class="article-info">
       <span class="date">Feb 9, 2012</span> &nbsp; | &nbsp; <a class="comments" href="#">15 Comments</a>
     </div>
     <div class="article-perex">
-      In et enim orci. Curabitur nulla nunc, efficitur ac euismod euismod, dapibus in nibh. Donec a ornare mi. Nullam purus lectus, porta et eros in, vestibulum vehicula nunc. Etiam felis justo, venenatis vitae efficitur a, vehicula sed enim. Suspendisse ullamcorper erat urna, et malesuada leo laoreet ac. Vestibulum convallis eget erat ac placerat. Proin placerat consequat vestibulum.
+      <p>In et enim orci. Curabitur nulla nunc, efficitur ac euismod euismod, dapibus in nibh. Donec a ornare mi. Nullam purus lectus, porta et eros in, vestibulum vehicula nunc. Etiam felis justo, venenatis vitae efficitur a, vehicula sed enim. Suspendisse ullamcorper erat urna, et malesuada leo laoreet ac. Vestibulum convallis eget erat ac placerat. Proin placerat consequat vestibulum.</p>
     </div>
     <div class="article-more">
-      <a href="#">Read more</a>
+      <a href="/article-detail/">Read more</a>
     </div>
-  </article>
-  <article class="blog-article">
-    <h1>
-      Refinery 2, episode: New engines</h1>
+  </article><article class="blog-article">
+    <h1>Refinery 2, episode: New engines</h1>
     <div class="article-info">
       <span class="date">Feb 9, 2012</span> &nbsp; | &nbsp; <a class="comments" href="#">15 Comments</a>
     </div>
     <div class="article-perex">
-      In et enim orci. Curabitur nulla nunc, efficitur ac euismod euismod, dapibus in nibh. Donec a ornare mi. Nullam purus lectus, porta et eros in, vestibulum vehicula nunc. Etiam felis justo, venenatis vitae efficitur a, vehicula sed enim. Suspendisse ullamcorper erat urna, et malesuada leo laoreet ac. Vestibulum convallis eget erat ac placerat. Proin placerat consequat vestibulum.
+      <p>In et enim orci. Curabitur nulla nunc, efficitur ac euismod euismod, dapibus in nibh. Donec a ornare mi. Nullam purus lectus, porta et eros in, vestibulum vehicula nunc. Etiam felis justo, venenatis vitae efficitur a, vehicula sed enim. Suspendisse ullamcorper erat urna, et malesuada leo laoreet ac. Vestibulum convallis eget erat ac placerat. Proin placerat consequat vestibulum.</p>
     </div>
     <div class="article-more">
-      <a href="#">Read more</a>
+      <a href="/article-detail/">Read more</a>
     </div>
   </article>
+  <div class="paging-wrap">
+    <div class="paging">
+      <a href="#" class="active">1</a>
+      <a href="#">2</a>
+      <a href="#">3</a>
+      <a href="#">4</a>
+      <a href="#">5</a>
+    </div>
+  </div>
 </div>
