--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -133,6 +133,37 @@ body {
   }
 }
 
+/* paging */
+
+.paging-wrap {
+  margin: 30px 0 0;
+  text-align: center;
+
+  .paging {
+    display: inline-block;
+  }
+
+  a {
+    display: inline-block;
+    float: left;
+    width: 30px;
+    height: 30px;
+    border-right: 1px solid #fff;
+    font-size: 14px;
+    text-align: center;
+    text-decoration: none;
+    line-height: 30px;
+    color: #fff;
+    background-color: $main-color;
+    transition: background-color 0.3s;
+
+    &:hover,
+    &.active {
+      background-color: $secondary-color;
+    }
+  }
+}
+
 /* sidebar */
 .sidebar {
   display: inline-block;
