gist snippets and disqus comments

--- a/source/article-detail.html.erb
+++ b/source/article-detail.html.erb
@@ -16,9 +16,24 @@ title: 'Refinery 2, episode: New engines | Žižkov.rb'
 
     <p>In et enim orci. Curabitur nulla nunc, efficitur ac euismod euismod, dapibus in nibh. Donec a ornare mi. Nullam purus lectus, porta et eros in, vestibulum vehicula nunc. Etiam felis justo, venenatis vitae efficitur a, vehicula sed enim. Suspendisse ullamcorper erat urna, et malesuada leo laoreet ac. Vestibulum convallis eget erat ac placerat. Proin placerat consequat vestibulum. Aliquam justo nisi, varius id dui quis, rutrum aliquet libero. Nulla sapien urna, condimentum a risus a, vulputate lacinia erat. Maecenas efficitur ut ante et venenatis. In lacus nunc, blandit vel lorem et, eleifend lobortis lectus.</p>
 
+    <script src="https://gist.github.com/simi/1016938.js"></script>
+
     <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque ut urna id magna aliquet fermentum. Donec quis ex commodo, fermentum turpis sed, convallis velit. Nunc id mattis nunc. Pellentesque maximus, sapien dapibus ornare facilisis, arcu dolor suscipit nunc, sit amet luctus felis purus quis nunc. Ut eget orci quis nisi finibus blandit. Aliquam erat volutpat. Aliquam sodales accumsan ante. Aliquam rhoncus mi eu quam auctor, in placerat purus maximus. Phasellus vel odio ac purus tincidunt suscipit in eget magna. Nulla malesuada ut augue pretium pretium.</p>
   </div>
   <div class="article-comments">
     <h2>Comments</h2>
+    <div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES * * */
+        var disqus_shortname = 'zizkovrb';
+        
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
   </div>
 </article>
