--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,7 +6,7 @@ title: 'Žižkov.rb'
   <article class="blog-article">
     <h1>Refinery 2, episode: New engines</h1>
     <div class="article-info">
-      <span class="date">Feb 9, 2012</span> &nbsp; | &nbsp; <a class="comments" href="#">15 Comments</a>
+      <span class="date">Feb 9, 2012</span> &nbsp; | &nbsp; <a class="comments" href="/article-detail/#disqus_thread">0 Comments</a>
     </div>
     <div class="article-perex">
       <p>In et enim orci. Curabitur nulla nunc, efficitur ac euismod euismod, dapibus in nibh. Donec a ornare mi. Nullam purus lectus, porta et eros in, vestibulum vehicula nunc. Etiam felis justo, venenatis vitae efficitur a, vehicula sed enim. Suspendisse ullamcorper erat urna, et malesuada leo laoreet ac. Vestibulum convallis eget erat ac placerat. Proin placerat consequat vestibulum.</p>
@@ -18,7 +18,7 @@ title: 'Žižkov.rb'
   <article class="blog-article">
     <h1>Refinery 2, episode: New engines</h1>
     <div class="article-info">
-      <span class="date">Feb 9, 2012</span> &nbsp; | &nbsp; <a class="comments" href="#">15 Comments</a>
+      <span class="date">Feb 9, 2012</span> &nbsp; | &nbsp; <a class="comments" href="/article-detail/#disqus_thread">0 Comments</a>
     </div>
     <div class="article-perex">
       <p>In et enim orci. Curabitur nulla nunc, efficitur ac euismod euismod, dapibus in nibh. Donec a ornare mi. Nullam purus lectus, porta et eros in, vestibulum vehicula nunc. Etiam felis justo, venenatis vitae efficitur a, vehicula sed enim. Suspendisse ullamcorper erat urna, et malesuada leo laoreet ac. Vestibulum convallis eget erat ac placerat. Proin placerat consequat vestibulum.</p>
@@ -29,7 +29,7 @@ title: 'Žižkov.rb'
   </article><article class="blog-article">
     <h1>Refinery 2, episode: New engines</h1>
     <div class="article-info">
-      <span class="date">Feb 9, 2012</span> &nbsp; | &nbsp; <a class="comments" href="#">15 Comments</a>
+      <span class="date">Feb 9, 2012</span> &nbsp; | &nbsp; <a class="comments" href="/article-detail/#disqus_thread">0 Comments</a>
     </div>
     <div class="article-perex">
       <p>In et enim orci. Curabitur nulla nunc, efficitur ac euismod euismod, dapibus in nibh. Donec a ornare mi. Nullam purus lectus, porta et eros in, vestibulum vehicula nunc. Etiam felis justo, venenatis vitae efficitur a, vehicula sed enim. Suspendisse ullamcorper erat urna, et malesuada leo laoreet ac. Vestibulum convallis eget erat ac placerat. Proin placerat consequat vestibulum.</p>
