added archive section

--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -133,6 +133,16 @@ body {
   }
 }
 
+/* archive */
+.archive-article {
+  padding-bottom: 0.5em;
+  border-bottom: 1px solid $secondary-color;
+
+  h2 {
+    margin-bottom: 0;
+  }
+}
+
 /* paging */
 
 .paging-wrap {
