--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -30,10 +30,10 @@
           <nav>
             <ul class="main-menu">
               <li>
-                <a href="#" class="active">Blog</a>
+                <a href="/" class="active">Blog</a>
               </li>
               <li>
-                <a href="#">Archive</a>
+                <a href="/archive">Archive</a>
               </li>
               <li>
                 <a href="#">About us</a>
