added about-us page

--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -2,6 +2,7 @@
 
 @import 'helpers.scss';
 @import 'typography.scss';
+@import 'fontello';
 
 $main-color: #a52d23;
 $secondary-color: #c9482e;
@@ -178,6 +179,23 @@ body {
   }
   .next img {
     margin: 8px 5px 0 0;
+  }
+}
+
+/* members */
+.member {
+  padding-bottom: 0.5em;
+  border-bottom: 1px solid $secondary-color;
+
+  .photo {
+    float: left;
+    width: 100px;
+    height: 100px;
+    margin: 0 10px 10px 0;
+  }
+
+  h2 {
+    margin-bottom: 0;
   }
 }
 
