--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -33,10 +33,10 @@
                 <a href="/" class="active">Blog</a>
               </li>
               <li>
-                <a href="/archive">Archive</a>
+                <a href="/archive/">Archive</a>
               </li>
               <li>
-                <a href="#">About us</a>
+                <a href="/about-us/">About us</a>
               </li>
               <li>
                 <a href="#">Contact</a>
