--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -199,6 +199,12 @@ body {
   }
 }
 
+/* contact */
+
+.social-contact {
+  font-size: 2em;
+}
+
 /* sidebar */
 .sidebar {
   display: inline-block;
