--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -39,7 +39,7 @@
                 <a href="/about-us/">About us</a>
               </li>
               <li>
-                <a href="#">Contact</a>
+                <a href="/contact/">Contact</a>
               </li>
             </ul>
           </nav>
