--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,52 +1,36 @@
 ---
 title: 'Žižkov.rb'
+pageable: true
+per_page: 4
 ---
 
 <div class="blog-articles">
-  <article class="blog-article">
-    <h1>Refinery 2, episode: New engines</h1>
-    <div class="article-info">
-      <span class="date">Feb 9, 2012</span> &nbsp; | &nbsp; <a class="comments" href="/article-detail/#disqus_thread">0 Comments</a>
+  <% page_articles.each do |article| %>
+    <article class="blog-article">
+      <h1><%= article.title %></h1>
+      <div class="article-info">
+        <span class="date"><%= date(article.date) %></span> &nbsp; | &nbsp; <a class="comments" data-disqus-url="<%= article.url %>" href="#disqus_thread">0 Comments</a>
+      </div>
+      <div class="article-perex">
+        <p><%= article.summary %></p>
+      </div>
+      <div class="article-more">
+        <%= link_to 'Read more', article %>
+      </div>
+    </article>
+  <% end %>
+
+  <% if paginate %>
+    <div class="paging-wrap">
+      <div class="paging">
+        <a href="#" class="prev"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA4AAAAOCAYAAAAfSC3RAAAAl0lEQVQoU52SQQqDMBBFnaW1oF6v2t5AL+JOS6+qLiR9AykMommM8DfJf85n8iU7+ZxzN65mEXFHFjk6BCo5H1APuESBQDXGCTUojwKBKswjeqINFYBrcKKPp9DLGxUog6CH3hhb8/cwCHTH/PHxbKpTEIZdp4I6IinqL1vScgx8/TkMrAXQDT+iC7CbrJXroppj3+Jfyb/QpVQLMu1b+AAAAABJRU5ErkJggg==" alt="prev" /></a>
+        <a href="#" class="active">1</a>
+        <a href="#">2</a>
+        <a href="#">3</a>
+        <a href="#">4</a>
+        <a href="#">5</a>
+        <a href="#" class="next"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA4AAAAOCAYAAAAfSC3RAAAAmElEQVQoU52STQ5AMBCFTSxwVcHORbiBv+thgWW9JxWNVKlJ3qYzX2faeRI8hFJKkEpEZLWVMGkNgDESNVQCnu5Fb+AGYIAywKMJu8AIhQsUQi1UmJ3fwBkAL2A0GuZZ4AOyvtNjz8LfQ6j743HOTmbHs4Rjp/9BxzpsHa9RPUCvz/m1DjqHBuih3McABCttuWN3X53jNPkOsBxUIY9yky4AAAAASUVORK5CYII=" alt="next" /></a>
+      </div>
     </div>
-    <div class="article-perex">
-      <p>In et enim orci. Curabitur nulla nunc, efficitur ac euismod euismod, dapibus in nibh. Donec a ornare mi. Nullam purus lectus, porta et eros in, vestibulum vehicula nunc. Etiam felis justo, venenatis vitae efficitur a, vehicula sed enim. Suspendisse ullamcorper erat urna, et malesuada leo laoreet ac. Vestibulum convallis eget erat ac placerat. Proin placerat consequat vestibulum.</p>
-    </div>
-    <div class="article-more">
-      <a href="/article-detail/">Read more</a>
-    </div>
-  </article>
-  <article class="blog-article">
-    <h1>Refinery 2, episode: New engines</h1>
-    <div class="article-info">
-      <span class="date">Feb 9, 2012</span> &nbsp; | &nbsp; <a class="comments" href="/article-detail/#disqus_thread">0 Comments</a>
-    </div>
-    <div class="article-perex">
-      <p>In et enim orci. Curabitur nulla nunc, efficitur ac euismod euismod, dapibus in nibh. Donec a ornare mi. Nullam purus lectus, porta et eros in, vestibulum vehicula nunc. Etiam felis justo, venenatis vitae efficitur a, vehicula sed enim. Suspendisse ullamcorper erat urna, et malesuada leo laoreet ac. Vestibulum convallis eget erat ac placerat. Proin placerat consequat vestibulum.</p>
-    </div>
-    <div class="article-more">
-      <a href="/article-detail/">Read more</a>
-    </div>
-  </article><article class="blog-article">
-    <h1>Refinery 2, episode: New engines</h1>
-    <div class="article-info">
-      <span class="date">Feb 9, 2012</span> &nbsp; | &nbsp; <a class="comments" href="/article-detail/#disqus_thread">0 Comments</a>
-    </div>
-    <div class="article-perex">
-      <p>In et enim orci. Curabitur nulla nunc, efficitur ac euismod euismod, dapibus in nibh. Donec a ornare mi. Nullam purus lectus, porta et eros in, vestibulum vehicula nunc. Etiam felis justo, venenatis vitae efficitur a, vehicula sed enim. Suspendisse ullamcorper erat urna, et malesuada leo laoreet ac. Vestibulum convallis eget erat ac placerat. Proin placerat consequat vestibulum.</p>
-    </div>
-    <div class="article-more">
-      <a href="/article-detail/">Read more</a>
-    </div>
-  </article>
-  <div class="paging-wrap">
-    <div class="paging">
-      <a href="#" class="prev"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA4AAAAOCAYAAAAfSC3RAAAAl0lEQVQoU52SQQqDMBBFnaW1oF6v2t5AL+JOS6+qLiR9AykMommM8DfJf85n8iU7+ZxzN65mEXFHFjk6BCo5H1APuESBQDXGCTUojwKBKswjeqINFYBrcKKPp9DLGxUog6CH3hhb8/cwCHTH/PHxbKpTEIZdp4I6IinqL1vScgx8/TkMrAXQDT+iC7CbrJXroppj3+Jfyb/QpVQLMu1b+AAAAABJRU5ErkJggg==" alt="prev" /></a>
-      <a href="#" class="active">1</a>
-      <a href="#">2</a>
-      <a href="#">3</a>
-      <a href="#">4</a>
-      <a href="#">5</a>
-      <a href="#" class="next"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA4AAAAOCAYAAAAfSC3RAAAAmElEQVQoU52STQ5AMBCFTSxwVcHORbiBv+thgWW9JxWNVKlJ3qYzX2faeRI8hFJKkEpEZLWVMGkNgDESNVQCnu5Fb+AGYIAywKMJu8AIhQsUQi1UmJ3fwBkAL2A0GuZZ4AOyvtNjz8LfQ6j743HOTmbHs4Rjp/9BxzpsHa9RPUCvz/m1DjqHBuih3McABCttuWN3X53jNPkOsBxUIY9yky4AAAAASUVORK5CYII=" alt="next" /></a>
-    </div>
-  </div>
+  <% end %>
 </div>
